--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -58,9 +58,9 @@
         <!-- body部分 下で変更します -->
         <%= @blog.body %>
         <!-- body部分 ここまで -->
-      </p>
+      </p>rails
       <%= link_to "編集", edit_blog_path(@blog) %>
-      <a href="#">削除</a>
+      <%= link_to "削除", blog_path(@blog), method: :delete %>
       <div class="author-case">
         <div class="author-image"></div>
         <div class="author-box">
